--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,37 +1,55 @@
-nav {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #734C4C;
-  padding: 0.1em 1em;
-  height: 90px;
-  font-size: 20px;
-}
+  nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #734C4C;
+    padding: 0.1em 1em;
+    height: 90px;
+    font-size: 20px;
+  }
 
-nav a,
-nav span {
-  margin: 0 10px;
-  padding: 5px;
-  text-decoration: none;
-  color: white;
+  .botaoSair {
+    margin-right: 50px;
+    
+  }
 
-}
+  @media (max-width: 1082px) {
 
-nav a:hover,
-nav span:hover {
-  color: #ccc;
-}
+    nav a{
+      display: none;
+    }
 
-nav span:hover {
-  cursor: pointer;
-}
+    .botaoSair {
+      margin-right: 50px;
+      margin-left: 100%;
+    }
+  
+  }
+
+  nav a,
+  nav span {    
+    margin: 0 10px;
+    padding: 5px;
+    text-decoration: none;
+    color: white;
+
+  }
+
+  nav a:hover,
+  nav span:hover {
+    color: #ccc;
+  }
+
+  nav span:hover {
+    cursor: pointer;
+  }
 
 
-.active {
-  background-color: #5f3f3f;
-  color: #fff;
-  padding: 20px;
-  border: 1px solid white;
-  border-radius: 10px;
+  .active {
+    background-color: #5f3f3f;
+    color: #fff;
+    padding: 20px;
+    border: 1px solid white;
+    border-radius: 10px;
 
-}
+  }
