--- a/src/components/Message.css
+++ b/src/components/Message.css
@@ -9,7 +9,8 @@
     margin-right: auto;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center;    
+    margin-bottom: 10px;
   }
   
   .error {
