Ajustes no front

--- a/src/pages/Despesas/CriarDespesas.css
+++ b/src/pages/Despesas/CriarDespesas.css
@@ -52,7 +52,7 @@
     color: #FFFFFF;
 }
 
-.css-textinput-11aywtz {
+.css-11aywtz {
     font-size: 20px;    
     border: none;
     display: block;
